# cleaner

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
src/: cleaner.py  cli.py  moduletracker.py
src/cleaner/: __init__.py  __main__.py  cleaner.py  cli.py  pathutils.py  spacetracker.py
test/: cleaner_test.py
