[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "cleaner"
dynamic = ["version"]

authors = [
    {name="Ryan Adams", email="ryan.adams@instil.co"}
]
requires-python = ">= 3.11"
description = "Clean up node_modules directories"

dependencies = [
    "humanize"
]


[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
cleaner = "cleaner:main"

[tool.setuptools.dynamic]
version = {attr = "cleaner.__version__"}